# finetune

./: .gitignore  .gitignore copy  README.md  download_model.py  inference.py  main.py  merge_lora.py  pyproject.toml  train.py
config/: ds_config.json  train.yaml
data/: example.jsonl  preprocess.py  smoke_eval.jsonl  smoke_raw.jsonl  smoke_train.jsonl
docs/: 01_environment.md  03_train.md  04_inference_merge.md  05_testing.md  06_train_principles.md
docs/公式细节/: 01_监督微调损失.md  02_LoRA低秩适配.md  03_训练优化与显存.md  04_生成和采样.md  README.md
docs/微调应用/: 01_环境和模型.md  02_数据准备.md  03_训练.md  04_推理和合并.md  05_测试和检查.md  README.md
finetune/: README.md  inference.py  pyproject.toml  requirements.txt
finetune/config/: lora.yaml  train.yaml
finetune/data/: preprocess.py
finetune/docs/: 02_data_preprocess.md  03_train.md
finetune/model/: loader.py  lora.py
finetune/scripts/: infer.sh  merge.sh  train.sh
finetune/tests/: test_preprocess.py  test_trainer_config.py
finetune/trainer/: dataset.py  metrics.py  trainer.py
finetune/utils/: logger.py  save.py
model/: loader.py  lora.py  tokenizer.py
scripts/: infer.sh  merge.sh  train.sh
tests/: test_inference.py  test_model_loader.py  test_preprocess.py  test_train.py  test_trainer_config.py
trainer/: collator.py  dataset.py  trainer.py
utils/: save.py  seed.py
