[project]
name = "qwen3-4b-finetune"
version = "0.1.0"
description = "Qwen3-4B LoRA supervised fine-tuning utilities."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.12.1",
    "transformers==5.12.1",
    "peft==0.19.1",
    "accelerate==1.14.0",
    "pyyaml>=6.0.2",
    "safetensors>=0.5.3",
    "tensorboard>=2.18.0",
    "numpy>=2.2.0",
    "huggingface-hub>=0.33.0",
    "kernels>=0.12,<0.13",
]

[tool.uv]
package = false
